Fix word-wrap issue for long words, reformat nail polish JSON code, reword mismatch challenges to show what was learned.

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -174,6 +174,9 @@
   background-color: #020b22;
   border-radius: 0;
 }
+#bootstrap-overrides .panel-group {
+  word-wrap: break-word;
+}
 #bootstrap-overrides .panel-group .panel:first-child {
   border-radius: 6px 6px 0 0;
 }
@@ -207,6 +210,7 @@
   margin-bottom: 10px;
   background-color: rgba(255, 255, 255, 0.95);
   color: #837489;
+  word-wrap: normal;
 }
 #bootstrap-overrides .well .bl {
   color: #028AE3;
